# rdkafka-sasl2-test

./: .gitignore  Cargo.toml
.github/workflows/: build.yml
src/: kafka_client.rs  main.rs
