[package]
name = "rdkafka-sasl2-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
lambda_http = "0.4.1"
openssl-probe = "0.1.5"
rdkafka = { version = "0.28.0" }
tokio = "1.16.1"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
