[package]
name = "rdkafka-sasl2-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-probe = "0.1.5"
openssl = { version = "0.10.38", features = ["vendored"] }
rdkafka = { version = "0.27.0", features = ["cmake-build", "ssl-vendored"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
