[package]
name = "rdkafka-sasl2-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl-probe = "0.1.5"
rdkafka = { version = "0.28.0", features = ["ssl-vendored", "gssapi-vendored", "libz-static", "cmake-build"] }

[[bin]]
name = "bootstrap"
path = "src/main.rs"
